--- a/style.css
+++ b/style.css
@@ -1,12 +1,59 @@
+/* Google Front Import - Popins*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap');
+
 *{
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-.main{
-    width: 1000px;
-    height: 500px;
-    text-align: center;
-    background-color: grey;
-    margin: auto;
+:root{
+    /*==== Colors ====*/
+    --body-color:#f4e9f7;
+    --sidebar-color:#fff;
+    --primary-color:#695cfe;
+    --priamry-color-light:#f5f6;
+    --toggle-color:#ddd;
+    --text-color:#707070;
+    
+    /*==== Transition ====*/
+    --tran-03:all 0.4s ease;
+    --tran-03:all 0.5s ease;
+    --tran-04:all 0.6s ease;
+    --tran-05:all 0.6s ease;
 }
+/*====header==---*/
+.b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+  
+  .form-control-dark {
+    color: #fff;
+    background-color: var(--bs-dark);
+    border-color: var(--bs-gray);
+  }
+  .form-control-dark:focus {
+    color: #fff;
+    background-color: var(--bs-dark);
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+  }
+  
+  .bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+  }
+  
+  .text-small {
+    font-size: 85%;
+  }
+  
+  .dropdown-toggle {
+    outline: 0;
+  }
+/*===header ending===*/
