fix logo and trade me lan 1

--- a/style.css
+++ b/style.css
@@ -13,5 +13,16 @@ html, body{
 }
 
 .navbar {
-  
+  padding: 3rem 2rem;
+  height: 0rem;
+  min-height: 12vh;
+}
+
+.navbar .navbar-brand a{
+  padding: 1rem 0;
+  display: block; 
+}
+
+.navbar-brand{
+  font-family:'';
 }
