--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 /* Google Front Import - Popins*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap');
 
+*{ padding: 0; margin: 0;box-sizing: border-box;}
 html, body{
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
-    font-size: 1 rem;
     line-height: 24px;
+    font-size: 14px;
     box-sizing: border-box;
-    margin: 0;
-    overflow: hidden;
-    top: 0;
-    left: 0;
+    color: #516171;
 }
 
-.navbar {
-  padding: 3rem 2rem;
-  height: 0rem;
-  min-height: 12vh;
+/* NAVBAR*/
+.img{
+  max-width: 100%;
+  height: auto;
+  margin: 0px 8px 0px -8px;
+  padding: 8px;
+}
+.navbar{
+  box-shadow: 0px 6px 30px rgb(0,0,0,0.08);
 }
 
-.navbar .navbar-brand a{
-  padding: 1rem 0;
-  display: block; 
+.nav-link{
+  transition: all 0.2s;
 }
 
-.navbar-brand{
-  font-family:'';
+.nav-link:hover{
+  text-decoration: underline;
 }
+
