--- a/style.css
+++ b/style.css
@@ -100,6 +100,38 @@ input{
   border-radius: 0 8px 0 0;
   border-left: 8px;
 }
+/*footer*/
+.footer-underline {
+  border: 3px solid #bd1d20;
+  border-radius: 3px; 
+  width: 4rem;
+  margin: 2rem auto;  
+}
+.footer button{
+  text-align: center;
+  padding: 8px 12px;
+  cursor: pointer;
+}
+.footer button:hover{
+  color: #65605d;
+  text-decoration: underline;
+}
+.footer ul li a{
+  text-decoration: none;
+  color: #65605d;
+  line-height: 2px;
+}
+.footer ul li a:hover{
+  text-decoration: underline;
+  color: #65605d;
+}
+.footer-terms li{
+  padding: 12px;
+}
+.footer-icons i{
+  font-size: 24px;
+  padding: 4px;
+}
 
 /* Media Query*/
 @media(max-width: 992px
@@ -111,7 +143,6 @@ input{
     background: #f8f9fa;
     padding: auto 12px;
   }
-
   .row{
     padding: 0px 12px;
   }
